--- a/base/index.html
+++ b/base/index.html
@@ -175,6 +175,14 @@
                                 <span class="publication__year">2024</span>
                                 <p class="publication__citation">Verma P, Thakur D, Pandit SB. Exon nomenclature and classification of transcripts database (ENACTdb): a resource for analyzing alternative splicing mediated proteome diversity. Bioinfo Advances. 2024, V4-1.</p>
                             </div>
+                            <div class="publication">
+                                <span class="publication__year">2024</span>
+                                <p class="publication__citation">Verma P, Panda B, Singh KP, Pandit SB. Optimal protein sequence design mitigates mechanical failure in silk β-sheet nanocrystals. ACS Biomaterials Science & Engineering. 2021, V7-7.</p>
+                            </div>
+                            <div class="publication">
+                                <span class="publication__year">2024</span>
+                                <p class="publication__citation">Mondal AK, Verma P, Sengupta N, Dutta S, Pandit SB, Chattopadhyay K. Tyrosine in the hinge region of the pore‐forming motif regulates oligomeric β‐barrel pore formation by Vibrio cholerae cytolysin. Molecular microbiology. 2021, V4-115.</p>
+                            </div>
                         </div>
                     </div>
 
