--- a/root/index.html
+++ b/root/index.html
@@ -92,7 +92,8 @@
                 <h2 class="section__title">Research Experience</h2>
                 <div class="research-projects">
                     <div class="card research-project">
-                        <div class="card__body">
+                        <div class="card__body research-content">
+                            <div class="research-text">
                             <h3 class="project__title">Exon nomenclature and classification of transcripts (ENACT) framework and database development</h3>
                             <div class="project__meta">
                                 <span class="project__year">2019</span>
@@ -121,7 +122,11 @@
                                     <li>The synergistic interplay between ATR and AS processes shapes the diversity of the human proteome, where AS-impacted region exhibits a higher fraction of domains per gene with this fraction remaining relatively stable across isoforms.</li>
                                 </ul>
                             </div>
-                            <img src="./_asset/text.jpg" alt="Project Image" style="width: 100%; max-width: 300px; height: auto; margin-left: 20px;">
+                            </div>
+                            <div class="research-image">
+                            <img src="./_asset/text.jpg" alt="Project Image" class="zoomable-image">
+                            </div>
+                            <!-- <img src="./_asset/text.jpg" alt="Project Image" style="width: 100%; max-width: 300px; height: auto; margin-left: 20px;"> -->
                         </div>
                     </div>
 
@@ -236,7 +241,7 @@
                 <div class="skills-grid">
                     <div class="card">
                         <div class="card__header">
-                            <h3 class="skills__category-title">Programming</h3>
+                            <h3 class="skills__category-title">Programming and Tech.</h3>
                         </div>
                         <div class="card__body">
                             <div class="skills-list">
@@ -244,6 +249,10 @@
                                 <span class="skill-tag">JavaScript</span>
                                 <span class="skill-tag">ReactJS</span>
                                 <span class="skill-tag">Django</span>
+                                <span class="skill-tag">MySQL</span>
+                                <span class="skill-tag">Apache</span>
+                                <span class="skill-tag">HTML</span>
+                                <span class="skill-tag">CSS</span>
                             </div>
                         </div>
                     </div>
@@ -289,20 +298,6 @@
                                 <span class="skill-tag">Network centrality</span>
                                 <span class="skill-tag">Correlation network analysis</span>
                                 <span class="skill-tag">Community partitioning</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card__header">
-                            <h3 class="skills__category-title">Technologies</h3>
-                        </div>
-                        <div class="card__body">
-                            <div class="skills-list">
-                                <span class="skill-tag">MySQL</span>
-                                <span class="skill-tag">Apache</span>
-                                <span class="skill-tag">HTML</span>
-                                <span class="skill-tag">CSS</span>
                             </div>
                         </div>
                     </div>
