--- a/root/index.html
+++ b/root/index.html
@@ -124,7 +124,7 @@
                             </div>
                             </div>
                             <div class="research-image">
-                            <img src="./_asset/text.jpg" alt="Project Image" class="zoomable-image">
+                            <img src="./asset/text.jpg" alt="Project Image" class="zoomable-image">
                             </div>
                             <!-- <img src="./_asset/text.jpg" alt="Project Image" style="width: 100%; max-width: 300px; height: auto; margin-left: 20px;"> -->
                         </div>
