--- a/root/index.html
+++ b/root/index.html
@@ -392,6 +392,8 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 Paras Verma, Ph.D. All rights reserved.</p>
+            <br></br>
+            <p>Designed with help of Perplexity Labs</p>
         </div>
     </footer>
 
