--- a/paras/index_04jun25.html
+++ b/paras/index_04jun25.html
@@ -6,8 +6,6 @@
     <title>Paras Verma, Ph.D. - Computational Biologist</title>
     <meta name="description" content="Professional CV of Paras Verma, Computational Biologist specializing in transcriptomic and proteomic data integration, alternative splicing, and protein structure analysis.">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <!-- For GitHub Pages deployment, create a .nojekyll file in the repository root -->
 </head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVSK5MJMP2"></script>
@@ -47,7 +45,6 @@
                 <nav class="header__nav">
                     <ul class="nav-list">
                         <li><a href="#about" class="nav-link">About</a></li>
-                        <li><a href="#inclusivity" class="nav-link">Inclusivity</a></li>
                         <li><a href="#education" class="nav-link">Education</a></li>
                         <li><a href="#research" class="nav-link">Research</a></li>
                         <li><a href="#publications" class="nav-link">Publications</a></li>
@@ -67,22 +64,7 @@
                 <div class="card">
                     <div class="card__body">
                         <p class="about__summary">
-                            As a computational biologist passionate about interdisciplinary research, I am excited to apply for future positions that leverage my expertise in developing computational frameworks for integrating multi-omics data. I believe I have a strong foundation in core skills that remain constant amidst rapid changes in bioinformatics – curiosity and programming proficiency. With those, I aim to drive innovative research into understanding biological systems.</p>
-                            <p class="about__summary">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My research experience spans genome annotation, transcriptomics, proteomics, genome assembly, protein structure and function analysis, and evolutionary studies. I collaborated to uncover new insights into proteome diversity and its regulation and am eager to join a research team where I can apply skills to contribute towards meaningful biological insights."
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="inclusivity" class="section">
-            <div class="container">
-                <h2 class="section__title">Inclusivity Statement</h2>
-                <div class="card">
-                    <div class="card__body">
-                        <p class="about__summary">
-                            With roots from India, one of the world's most ethically and religiously diverse countries, I am committed to promoting and embracing diversity, equity, and inclusion in STEM fields, valuing and leveraging the unique perspectives and experiences that diverse backgrounds bring to improve science.
+                            I am a computational biologist, with experience in developing computational frameworks for integrating transcriptomic and proteomic data from genome annotation models. My interdisciplinary background bridges biology, engineering, and bioinformatics, focusing on understanding how alternative splicing drives proteome diversity. My collaborative research has also encompassed genome assembly and the detailed study of protein structure and function using biophysical, materiomics, and evolutionary approaches.
                         </p>
                     </div>
                 </div>
@@ -122,7 +104,7 @@
                             <div class="research-text">
                             <h3 class="project__title">Exon nomenclature and classification of transcripts (ENACT) framework and database development</h3>
                             <div class="project__meta">
-                                <span class="project__year">2019 - 2023 &nbsp;&nbsp;&nbsp;&nbsp;  <a href = "https://pubmed.ncbi.nlm.nih.gov/39569321/" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Publication Database</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a href = "https://pubmed.ncbi.nlm.nih.gov/40335152/" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Publication Method</a></span>
+                                <span class="project__year">2019 - 2023</span>
                                 <span class="project__advisor">Advisor: Dr. Shashi B. Pandit, Associate Professor (Biology), IISER-M</span>
                             </div>
                             <div class="project__skills">
@@ -161,7 +143,7 @@
                             <div class="research-text">
                             <h3 class="project__title">Understanding the sequence optimization of spider silk nanocrystals by comparative evaluation of native with globular protein-inspired geometries</h3>
                             <div class="project__meta">
-                                <span class="project__year">2021 &nbsp;&nbsp;&nbsp;&nbsp;  <a href = "https://pubmed.ncbi.nlm.nih.gov/34151552/" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Publication</a></span>
+                                <span class="project__year">2021</span>
                                 <span class="project__advisor">Advisor: Dr. Shashi B. Pandit & Dr. Kamal P. Singh, IISER-M</span>
                             </div>
                             <div class="project__skills">
@@ -201,7 +183,7 @@
                             <div class="research-text">
                             <h3 class="project__title">Understanding the Molecular Basis of Compromise in the Pore-Forming Activity of Vibrio cholerae Cytolysin (VCC) upon Mutation of Residue Y321 to Alanine</h3>
                             <div class="project__meta">
-                                <span class="project__year">2020 &nbsp;&nbsp;&nbsp;&nbsp;  <a href = "https://pubmed.ncbi.nlm.nih.gov/33089544/" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Publication</a></span> 
+                                <span class="project__year">2020</span>
                                 <span class="project__advisor">Advisor: Dr. Shashi B. Pandit & Dr. Kausik Chattopadhyay, IISER-M</span>
                             </div>
                             <div class="project__skills">
@@ -232,27 +214,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card research-project">
-                        <div class="card__body research-content">
-                            <div class="research-text">
-                            <h3 class="project__title">Other Projects</h3>
-                            <div class="project__achievements">
-                                <ul>
-                                    <li><h5>Diversity, function and transmission of gut symbionts in the termite <i>Coptotermes heimi</i>.</h5></li>
-                                    <span class="project__advisor">Advisor: Dr. Shashi B. Pandit & Dr. Rhitoban Ray Chaudhary, IISER-M</span>
-
-                                    <p class="project__description">A comprehensive investigation of gut microbial communities in termite <i>C. heimi</i> was performed. We examined symbiont diversity, functional, and transmission potential across life stages.</p>
-
-                                    <li><h5>Genome assembly and annotation of the parasitoid jewel wasp <i>Nasonia Oneida.</i></h5></li>
-                                    <span class="project__advisor">Advisor: Dr. Shashi B. Pandit & Dr. Rhitoban Ray Chaudhary, IISER-M</span>
-
-                                    <p class="project__description">This project involved generating the first reference genome of <i>N. Oneida</i>, with contributions to evolutionary genomics and parasitoid wasp research. We used transcriptome data (30× coverage) across developmental stages, which helped improve gene structure prediction and enhanced annotation quality. This procedure yielded ~14K protein-coding genes with ~90% functional annotation coverage and enabled the characterization of ~30% repetitive sequences with subclassifications, including LINEs.</p>
-                                </ul>
-                            </div>
-                            </div>
-
-                        </div>
-                    </div>
             </div>
         </section>
 
@@ -267,19 +228,19 @@
                         <div class="card__body">
                             <div class="publication">
                                 <span class="publication__year">2025</span>
-                                <p class="publication__citation">Verma P, Thakur D, Awasthi D, Pandit SB. Exon nomenclature and classification of transcripts (ENACT) provides a systematic framework to annotate exon attributes.<a href = "https://pubmed.ncbi.nlm.nih.gov/40335152/" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Genome Res.</a> 35(6):1440-1455</p>
+                                <p class="publication__citation">Verma P, Thakur D, Awasthi D, Pandit SB. Exon nomenclature and classification of transcripts (ENACT) provides a systematic framework to annotate exon attributes. Genome Res.</p>
                             </div>
                             <div class="publication">
                                 <span class="publication__year">2024</span>
-                                <p class="publication__citation">Verma P, Thakur D, Pandit SB. Exon nomenclature and classification of transcripts database (ENACTdb): a resource for analyzing alternative splicing mediated proteome diversity. <a href = "https://pubmed.ncbi.nlm.nih.gov/39569321/" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Bioinfo Advances.</a> 2024, V4-1.</p>
+                                <p class="publication__citation">Verma P, Thakur D, Pandit SB. Exon nomenclature and classification of transcripts database (ENACTdb): a resource for analyzing alternative splicing mediated proteome diversity. Bioinfo Advances. 2024, V4-1.</p>
                             </div>
                             <div class="publication">
-                                <span class="publication__year">2021</span>
-                                <p class="publication__citation">Verma P, Panda B, Singh KP, Pandit SB. Optimal protein sequence design mitigates mechanical failure in silk β-sheet nanocrystals. <a href = "https://pubmed.ncbi.nlm.nih.gov/34151552/" class="publication-link" target="_blank">   <i class="fa fa-external-link"></i> ACS Biomaterials Science & Engineering.</a> 2021, V7-7.</p>
+                                <span class="publication__year">2024</span>
+                                <p class="publication__citation">Verma P, Panda B, Singh KP, Pandit SB. Optimal protein sequence design mitigates mechanical failure in silk β-sheet nanocrystals. ACS Biomaterials Science & Engineering. 2021, V7-7.</p>
                             </div>
                             <div class="publication">
-                                <span class="publication__year">2021</span>
-                                <p class="publication__citation">Mondal AK, Verma P, Sengupta N, Dutta S, Pandit SB, Chattopadhyay K. Tyrosine in the hinge region of the pore‐forming motif regulates oligomeric β‐barrel pore formation by Vibrio cholerae cytolysin. <a href = "https://pubmed.ncbi.nlm.nih.gov/33089544/" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Molecular microbiology.</a> 2021, V4-115.</p>
+                                <span class="publication__year">2024</span>
+                                <p class="publication__citation">Mondal AK, Verma P, Sengupta N, Dutta S, Pandit SB, Chattopadhyay K. Tyrosine in the hinge region of the pore‐forming motif regulates oligomeric β‐barrel pore formation by Vibrio cholerae cytolysin. Molecular microbiology. 2021, V4-115.</p>
                             </div>
                         </div>
                     </div>
@@ -290,13 +251,36 @@
                         </div>
                         <div class="card__body">
                             <div class="publication">
-                                <span class="publication__year">2025</span>
+                                <span class="publication__year">2024</span>
                                 <p class="publication__citation">Rana A, Verma P, Pandit SB, Werren J, Wang X, Raychoudhury R. Genome assembly and annotation of the parasitoid jewel wasp Nasonia Oneida. (In review).</p>
                             </div>
                             <div class="publication">
-                                <span class="publication__year">2025</span>
-                                <p class="publication__citation">Thakur D, Verma P, Pandit SB. Deciphering binding site conformational variability of substrate promiscuous and specialist enzymes, <a href = "https://www.biorxiv.org/content/10.1101/2024.07.15.603504v1" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> bioRxiv</a>, 2024. (in review)</p>
-                                <div class="publication">
+                                <span class="publication__year">2024</span>
+                                <p class="publication__citation">Thakur D, Verma P, Pandit SB. Deciphering binding site conformational variability of substrate promiscuous and specialist enzymes, bioRxiv, 2024. (in review)</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__header">
+                            <h3>Papers in Preparation</h3>
+                        </div>
+                        <div class="card__body">
+                            <div class="publication">
+                                <span class="publication__year">2024</span>
+                                <p class="publication__citation">Verma P, Thakur D, Pandit SB. Uncovering the translatome impact of transcriptome induced diversity in eukaryotes, bioRxiv, 2024. (under revision, soon to be communicated)</p>
+                            </div>
+                            <div class="publication">
+                                <span class="publication__year">2024</span>
+                                <p class="publication__citation">Verma P, Thakur D, Pandit SB. Distinct profile of exonic loci and their role in facilitating transcriptomic and proteomic diversity with species advancements.</p>
+                            </div>
+                            <div class="publication">
+                                <span class="publication__year">2024</span>
+                                <p class="publication__citation">Verma P, Thakur D, Pandit SB. Synergistic domain encoding potential of alternate transcription and splicing processes in diversifying human proteome.</p>
+                            </div>
+                            <div class="publication">
+                                <span class="publication__year">2024</span>
+                                <p class="publication__citation">Verma P, Thakur D, Pandit SB. Evolutionary repurposing of alternate splice site harboring loci with species advancements in diversifying proteome.</p>
                             </div>
                         </div>
                     </div>
