--- a/paras/index.html
+++ b/paras/index.html
@@ -67,9 +67,11 @@
                 <div class="card">
                     <div class="card__body">
                         <p class="about__summary">
-                            As a computational biologist passionate about interdisciplinary research, I am excited to apply for future positions that leverage my expertise in developing computational frameworks for integrating multi-omics data. I believe I have a strong foundation in core skills that remain constant amidst rapid changes in bioinformatics – curiosity and programming proficiency. With those, I aim to drive innovative research into understanding biological systems.</p>
+                            I am a computational biologist sincerely passionate about exploring the complexities of biological systems through interdisciplinary research. My expertise lies in developing computational frameworks that integrate multi-omics data, letting me uncover new layers of biological insight.</p>
                             <p class="about__summary">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My research experience spans genome annotation, transcriptomics, proteomics, genome assembly, protein structure and function analysis, and evolutionary studies. I collaborated to uncover new insights into proteome diversity and its regulation and am eager to join a research team where I can apply skills to contribute towards meaningful biological insights."
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Throughout my career, I have built a strong foundation in programming and data analysis. My research journey has led me to work on genome annotation, transcriptomics, proteomics, genome assembly, protein structure and function analysis, and evolutionary studies. I have contributed to projects that introduced <b>"Exon Grammar"</b>, revealing novel aspects of proteome diversity and its regulation. </p>
+                            <p class="about__summary">
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy analyzing complex datasets to extract meaningful discoveries and am always eager to apply my skills (gained from diverse projects) to new challenges in biology.
                         </p>
                     </div>
                 </div>
@@ -130,6 +132,7 @@
                                 <span class="skill-tag">Django</span>
                                 <span class="skill-tag">MySQL</span>
                                 <span class="skill-tag">Apache</span>
+                                <span class="skill-tag">Transcriptomics</span>
                                 <span class="skill-tag">Genomic annotation</span>
                                 <span class="skill-tag">BioPython</span>
                                 <span class="skill-tag">RefSeq data extraction</span>
@@ -334,6 +337,8 @@
                             <div class="skills-list">
                                 <span class="skill-tag">BioPython</span>
                                 <span class="skill-tag">Genomic annotation</span>
+                                <span class="skill-tag">Protein Structures</span>
+                                <span class="skill-tag">Protein Sequence function landscape</span>
                                 <span class="skill-tag">RefSeq data extraction</span>
                                 <span class="skill-tag">Pfam</span>
                                 <span class="skill-tag">PsiPred</span>
@@ -363,10 +368,12 @@
                         </div>
                         <div class="card__body">
                             <div class="skills-list">
-                                <span class="skill-tag">Principal component analysis</span>
-                                <span class="skill-tag">Network centrality</span>
-                                <span class="skill-tag">Correlation network analysis</span>
+                                <span class="skill-tag">Dimensionality Reduction</span>
+                                <span class="skill-tag">Network Science</span>
+                                <span class="skill-tag">Correlation and centrality analysis</span>
                                 <span class="skill-tag">Community partitioning</span>
+                                <span class="skill-tag">Classification tree algorithms</span>
+
                             </div>
                         </div>
                     </div>
