--- a/paras/index.html
+++ b/paras/index.html
@@ -34,7 +34,7 @@
                             <span class="contact-icon">🆔</span>
                             ORCID: 0000-0002-1649-4733
                         </a>
-                        <a href="#" class="contact-link">
+                        <a href="github.com/parasvcb" target= "_blank" class="contact-link">
                             <span class="contact-icon">💻</span>
                             GitHub Available
                         </a>
