--- a/paras/index.html
+++ b/paras/index.html
@@ -67,11 +67,11 @@
                 <div class="card">
                     <div class="card__body">
                         <p class="about__summary">
-                            I am a computational biologist sincerely passionate about exploring the complexities of biological systems through interdisciplinary research. My expertise lies in developing computational frameworks that integrate multi-omics data, letting me uncover new layers of biological insight.</p>
+                            I am a computational biologist, and passionate about exploring the complexities of biological systems through interdisciplinary research. My expertise lies in developing computational frameworks that integrate multi-omics data, letting me uncover new layers of biological insights.</p>
                             <p class="about__summary">
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Throughout my career, I have built a strong foundation in programming and data analysis. My research journey has led me to work on genome annotation, transcriptomics, proteomics, genome assembly, protein structure and function analysis, and evolutionary studies. I have contributed to projects that introduced <b>"Exon Grammar"</b>, revealing novel aspects of proteome diversity and its regulation. </p>
                             <p class="about__summary">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy analyzing complex datasets to extract meaningful discoveries and am always eager to apply my skills (gained from diverse projects) to new challenges in biology.
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As a data enthusiast, I'm always looking to apply my skills to new projects and contribute to meaningful research.
                         </p>
                     </div>
                 </div>
@@ -273,6 +273,10 @@
                                 <p class="publication__citation">Verma P, Thakur D, Awasthi D, Pandit SB. Exon nomenclature and classification of transcripts (ENACT) provides a systematic framework to annotate exon attributes.<a href = "https://pubmed.ncbi.nlm.nih.gov/40335152/" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Genome Res.</a> 35(6):1440-1455</p>
                             </div>
                             <div class="publication">
+                                <span class="publication__year">2025</span>
+                                <p class="publication__citation">Rana A, Verma P, Pandit SB, Werren J, Wang X, Raychoudhury R. Genome assembly and annotation of the parasitoid jewel wasp Nasonia Oneida.<a href = "https://www.nature.com/articles/s41597-025-05375-0" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Scientific Data.</a> 12:1096</p>
+                            </div>
+                            <div class="publication">
                                 <span class="publication__year">2024</span>
                                 <p class="publication__citation">Verma P, Thakur D, Pandit SB. Exon nomenclature and classification of transcripts database (ENACTdb): a resource for analyzing alternative splicing mediated proteome diversity. <a href = "https://pubmed.ncbi.nlm.nih.gov/39569321/" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> Bioinfo Advances.</a> 2024, V4-1.</p>
                             </div>
@@ -292,10 +296,6 @@
                             <h3>Submitted Papers</h3>
                         </div>
                         <div class="card__body">
-                            <div class="publication">
-                                <span class="publication__year">2025</span>
-                                <p class="publication__citation">Rana A, Verma P, Pandit SB, Werren J, Wang X, Raychoudhury R. Genome assembly and annotation of the parasitoid jewel wasp Nasonia Oneida. (In review).</p>
-                            </div>
                             <div class="publication">
                                 <span class="publication__year">2025</span>
                                 <p class="publication__citation">Thakur D, Verma P, Pandit SB. Deciphering binding site conformational variability of substrate promiscuous and specialist enzymes, <a href = "https://www.biorxiv.org/content/10.1101/2024.07.15.603504v1" class="publication-link" target="_blank">  <i class="fa fa-external-link"></i> bioRxiv</a>, 2024. (in review)</p>
