--- a/paras/index.html
+++ b/paras/index.html
@@ -67,11 +67,16 @@
                 <div class="card">
                     <div class="card__body">
                         <p class="about__summary">
-                            I am a computational biologist, and passionate about exploring the complexities of biological systems through interdisciplinary research. My expertise lies in developing computational frameworks that integrate multi-omics data, letting me uncover new layers of biological insights.</p>
+                           I am a computational biologist who is enthusiastic about using both traditional and modern computational tools to advance understanding of biological systems. My doctoral training has been interdisciplinary, spanning computational structural biology and evolutionary genomics. I have been fortunate to contribute to research ranging from single protein studies to organism-wide proteome diversification.</p>
+
                             <p class="about__summary">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Throughout my career, I have built a strong foundation in programming and data analysis. My research journey has led me to work on genome annotation, transcriptomics, proteomics, genome assembly, protein structure and function analysis, and evolutionary studies. I have contributed to projects that introduced <b>"Exon Grammar"</b>, revealing novel aspects of proteome diversity and its regulation. </p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My research started with protein sequence and its inter-relationship with three-dimensional structure and function, where I used modeling techniques and molecular dynamics simulations. Along the way, I have worked on identifying super-ring H-bond interaction motifs in spider silk, highlighting evolutionary creativity shaping its molecular attributes. However, under the initiative of functional genomics, my research advanced to detail how organisms diversify proteomes through a limited gene pool. In this context, recently, I was grateful to be part of a team developing an <b>“exon grammar”</b> approach, which aims to annotate exons in a way that could help us better understand how their inclusion affects protein diversity. To help the community assess the intra-gene proteome diversity, I developed a user-friendly database to visualize these annotations. I see this as an early step toward translating multi-omics data into practical insights. This will bridge the gap between two well-researched fields, post-transcriptional regulation, and corresponding protein level reorganization, which is essential to understanding physiological adaptations and cancerous states. 
+                             </p>
                             <p class="about__summary">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As a data enthusiast, I'm always looking to apply my skills to new projects and contribute to meaningful research.
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have collaborated with experimental groups at IISER-Mohali and helped them interpret the impact of long-ranging mutations and annotate newly assembled genome. As a data enthusiast, I'm always looking to apply my skills to new projects, focusing on contributing meaningful research. 
+                        </p>
+                        <p class="about__summary">
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If you are interested in exploring the potential of interdisciplinary bioinformatics—where classic approaches meet modern resources—I would be glad to connect. 
                         </p>
                     </div>
                 </div>
