--- a/paras/index.html
+++ b/paras/index.html
@@ -71,13 +71,11 @@
 
                             <p class="about__summary">
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My research started with protein sequence and its inter-relationship with three-dimensional structure and function, where I used modeling techniques and molecular dynamics simulations. Along the way, I have worked on identifying super-ring H-bond interaction motifs in spider silk, highlighting evolutionary creativity shaping its molecular attributes. However, under the initiative of functional genomics, my research advanced to detail how organisms diversify proteomes through a limited gene pool. In this context, recently, I was grateful to be part of a team developing an <b>“exon grammar”</b> approach, which aims to annotate exons in a way that could help us better understand how their inclusion affects protein diversity. To help the community assess the intra-gene proteome diversity, I developed a user-friendly database to visualize these annotations. I see this as an early step toward translating multi-omics data into practical insights. This will bridge the gap between two well-researched fields, post-transcriptional regulation, and corresponding protein level reorganization, which is essential to understanding physiological adaptations and cancerous states. 
-                             </p>
+                            </p>
                             <p class="about__summary">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have collaborated with experimental groups at IISER-Mohali and helped them interpret the impact of long-ranging mutations and annotate newly assembled genome. As a data enthusiast, I'm always looking to apply my skills to new projects, focusing on contributing meaningful research. 
-                        </p>
-                        <p class="about__summary">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If you are interested in exploring the potential of interdisciplinary bioinformatics—where classic approaches meet modern resources—I would be glad to connect. 
-                        </p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have collaborated with experimental groups at IISER-Mohali and helped them interpret the impact of long-ranging mutations and annotate newly assembled genome. As a data enthusiast, I'm always looking to apply my skills to new projects, focusing on contributing meaningful research.</p>
+                            <p class="about__summary">
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If you are interested in exploring the potential of interdisciplinary bioinformatics—where classic approaches meet modern resources—I would be glad to connect.</p>
                     </div>
                 </div>
             </div>
