--- a/paras/index.html
+++ b/paras/index.html
@@ -75,7 +75,7 @@
                             <p class="about__summary">
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have collaborated with experimental groups at IISER-Mohali and helped them interpret the impact of long-ranging mutations and annotate newly assembled genome. As a data enthusiast, I'm always looking to apply my skills to new projects, focusing on contributing meaningful research.</p>
                             <p class="about__summary">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If you are interested in exploring the potential of interdisciplinary bioinformatics—where classic approaches meet modern resources—I would be glad to connect.</p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If you are interested in exploring the potential of interdisciplinary bioinformatics, where classic approaches meet modern resources, I would be happy to connect.</p>
                     </div>
                 </div>
             </div>
